# biomassbay

./: README.md  biomass_partial_diri_closing.nc  pyproject.toml
data/: df_param.csv  exchange_groups.json
notebooks/: base_conditions.py
src/biomassbay/: __init__.py
