[project]
name = "biomassbay"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "carrascomj", email = "carrascomurielj@gmail.com" }
]
dependencies = [
    "aesara==2.7.9",
    "arviz==0.12.1",
    "cobra==0.20.0",
    "numpy==1.22.0",
    "pandas==1.5.2",
    "pymc==4.1.4",
    "tqdm==4.64.0",
    "plotnine @ git+https://github.com/has2k1/plotnine.git@6c82cdc20d6f81c96772da73fc07a672a0a0a6ef",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/biomassbay"]
